I've added some inline comments

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "import numpy as np\n",
     "\n",
     "# File to Load (Remember to Change These)\n",
-    "file_to_load = \"Resources/purchase_data.csv\"\n",
+    "file_to_load = \"../Resources/purchase_data.csv\"\n",
     "\n",
     "# Read Purchasing File and store into Pandas data frame\n",
     "purchase_data = pd.read_csv(file_to_load)"
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,16 +82,25 @@
        "0            576"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Creating a DataFrame df\n",
     "df=pd.DataFrame(purchase_data)\n",
+    "\n",
+    "#Get the number of unique values\n",
     "Unique_Players = df['SN'].nunique()\n",
+    "\n",
+    "#Create a dict\n",
     "data_pls = {'Total_Players':[Unique_Players]}\n",
+    "\n",
+    "#Create a dataframe for Output format\n",
     "Total_Players_df=pd.DataFrame(data_pls)\n",
+    "\n",
+    "#Displaying Dataframe\n",
     "Total_Players_df"
    ]
   },
@@ -120,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -169,26 +178,42 @@
        "0                     179         $3.05                  780      $2379.77"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Get the list of unique items\n",
     "Unique_Items=df['Item ID'].nunique()\n",
+    "\n",
+    "#Calculate the average price\n",
     "Average_format=df['Price'].mean()\n",
+    "\n",
+    "#Display the Average Price in the right format\n",
     "Avg_Price = str(\"$\"+\"{:.2f}\".format(Average_format))\n",
+    "\n",
+    "#Get the number of purchases\n",
     "Total_purchases=df['Purchase ID'].nunique()\n",
+    "\n",
+    "#Calculate the Total Revenue\n",
     "Total_Rev = df['Price'].sum()\n",
+    "\n",
+    "#Display the Average Price in the right format\n",
     "Total_Revenue = str(\"$\"+\"{:.2f}\".format(Total_Rev))\n",
     "\n",
+    "#Create a Dictionary for Output Summary\n",
     "Output = {\n",
     "  \"Number of Unique Items\": [Unique_Items],\n",
     "  \"Average Price\": [Avg_Price],\n",
     "    \"Number of Purchases\": [Total_purchases],\n",
     "    \"Total Revenue\": [Total_Revenue]\n",
     "}\n",
+    "\n",
+    "#Create a Dataframe for Output Summary\n",
     "Output_df=pd.DataFrame(Output)\n",
+    "\n",
+    "#Display the Output Summary\n",
     "Output_df"
    ]
   },
@@ -216,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -271,23 +296,41 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Reading only 2 columns from the csv\n",
     "Gender_file = pd.read_csv(file_to_load, usecols = ['SN','Gender'])\n",
+    "\n",
+    "#Creating a Dataframe\n",
     "List_Players_df = pd.DataFrame(Gender_file)\n",
+    "\n",
+    "#Drop all the duplicates to get the unique list of  2 fields combined\n",
     "Total_Unique_Players = List_Players_df.drop_duplicates()\n",
+    "\n",
+    "#Creating a Dataframe after the Data Cleansing\n",
     "Players_df=pd.DataFrame(Total_Unique_Players)\n",
-    "s=Players_df.Gender\n",
-    "counts=s.value_counts()\n",
-    "percent=s.value_counts(normalize=True)\n",
-    "percent100=s.value_counts(normalize=True).mul(100).round(2).astype(str) +'%'\n",
-    "Output_G_Frame=pd.DataFrame({'Total_Count':counts,'Percentage of Players':percent100})\n",
-    "Output_G_Frame\n"
+    "\n",
+    "#Calculate Number of Players by Gender\n",
+    "counts=Players_df.Gender.value_counts()\n",
+    "\n",
+    "#Calculating percentage and formatting\n",
+    "percentage_Players=Players_df.Gender.value_counts(normalize=True).mul(100).round(2).astype(str) +'%'\n",
+    "\n",
+    "#Creating Output Summary DataFrame\n",
+    "Output_Gender_Analysis=pd.DataFrame({'Total_Count':counts,'Percentage of Players':percentage_Players})\n",
+    "Output_Gender_Analysis\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -317,62 +360,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_f7b85_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Total Purchase Value</th>        <th class=\"col_heading level0 col3\" >Avg Total Purchase per Person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_e71f9_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Total Purchase Value</th>        <th class=\"col_heading level0 col3\" >Avg Total Purchase per Person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_f7b85_level0_row0\" class=\"row_heading level0 row0\" >Female</th>\n",
-       "                        <td id=\"T_f7b85_row0_col0\" class=\"data row0 col0\" >113</td>\n",
-       "                        <td id=\"T_f7b85_row0_col1\" class=\"data row0 col1\" >$3.20</td>\n",
-       "                        <td id=\"T_f7b85_row0_col2\" class=\"data row0 col2\" >$361.94</td>\n",
-       "                        <td id=\"T_f7b85_row0_col3\" class=\"data row0 col3\" >$4.47</td>\n",
+       "                        <th id=\"T_e71f9_level0_row0\" class=\"row_heading level0 row0\" >Female</th>\n",
+       "                        <td id=\"T_e71f9_row0_col0\" class=\"data row0 col0\" >113</td>\n",
+       "                        <td id=\"T_e71f9_row0_col1\" class=\"data row0 col1\" >$3.20</td>\n",
+       "                        <td id=\"T_e71f9_row0_col2\" class=\"data row0 col2\" >$361.94</td>\n",
+       "                        <td id=\"T_e71f9_row0_col3\" class=\"data row0 col3\" >$4.47</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_f7b85_level0_row1\" class=\"row_heading level0 row1\" >Male</th>\n",
-       "                        <td id=\"T_f7b85_row1_col0\" class=\"data row1 col0\" >652</td>\n",
-       "                        <td id=\"T_f7b85_row1_col1\" class=\"data row1 col1\" >$3.02</td>\n",
-       "                        <td id=\"T_f7b85_row1_col2\" class=\"data row1 col2\" >$1,967.64</td>\n",
-       "                        <td id=\"T_f7b85_row1_col3\" class=\"data row1 col3\" >$4.07</td>\n",
+       "                        <th id=\"T_e71f9_level0_row1\" class=\"row_heading level0 row1\" >Male</th>\n",
+       "                        <td id=\"T_e71f9_row1_col0\" class=\"data row1 col0\" >652</td>\n",
+       "                        <td id=\"T_e71f9_row1_col1\" class=\"data row1 col1\" >$3.02</td>\n",
+       "                        <td id=\"T_e71f9_row1_col2\" class=\"data row1 col2\" >$1,967.64</td>\n",
+       "                        <td id=\"T_e71f9_row1_col3\" class=\"data row1 col3\" >$4.07</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_f7b85_level0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
-       "                        <td id=\"T_f7b85_row2_col0\" class=\"data row2 col0\" >15</td>\n",
-       "                        <td id=\"T_f7b85_row2_col1\" class=\"data row2 col1\" >$3.35</td>\n",
-       "                        <td id=\"T_f7b85_row2_col2\" class=\"data row2 col2\" >$50.19</td>\n",
-       "                        <td id=\"T_f7b85_row2_col3\" class=\"data row2 col3\" >$4.56</td>\n",
+       "                        <th id=\"T_e71f9_level0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
+       "                        <td id=\"T_e71f9_row2_col0\" class=\"data row2 col0\" >15</td>\n",
+       "                        <td id=\"T_e71f9_row2_col1\" class=\"data row2 col1\" >$3.35</td>\n",
+       "                        <td id=\"T_e71f9_row2_col2\" class=\"data row2 col2\" >$50.19</td>\n",
+       "                        <td id=\"T_e71f9_row2_col3\" class=\"data row2 col3\" >$4.56</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x209b85000d0>"
+       "<pandas.io.formats.style.Styler at 0x1e07b72fb50>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Group By Gender Column\n",
     "Gender_Analysis = purchase_data.groupby(\"Gender\")\n",
+    "\n",
+    "#Calculate Total number of Purchases by Gender\n",
     "Number_of_Purchases=Gender_Analysis[\"Purchase ID\"].count()\n",
+    "\n",
+    "#Calculate Average Purchase Price of Purchases by Gender\n",
     "Avg_PPrice= Gender_Analysis[\"Price\"].mean()\n",
+    "\n",
+    "#Calculate Total Purchase by Gender\n",
     "Total_Purchase_By_Gender=Gender_Analysis[\"Price\"].sum()\n",
     "\n",
+    "#Calculate Average Total Purchase per person\n",
     "Avg_Total_Purchase_Person=Total_Purchase_By_Gender/counts\n",
+    "\n",
+    "#Create Output DataFrame\n",
     "Output_Gender_Analysis_df = pd.DataFrame({\"Purchase Count\": Number_of_Purchases, \n",
     "                                    \"Average Purchase Price\": Avg_PPrice,\n",
     "                                    \"Total Purchase Value\":Total_Purchase_By_Gender,\n",
     "                                    \"Avg Total Purchase per Person\": Avg_Total_Purchase_Person})\n",
-    "\n",
+    "#Format the Output Dataframe columns\n",
     "Final_Summary_Output= Output_Gender_Analysis_df.style.format({\"Average Purchase Price\":\"${:,.2f}\",\n",
     "                                  \"Total Purchase Value\":\"${:,.2f}\",\n",
     "                                  \"Avg Total Purchase per Person\":\"${:,.2f}\"})\n",
+    "#Adding the name of the index.\n",
     "Output_Gender_Analysis_df.index.name =\"Gender\"\n",
+    "\n",
+    "#Displaying the Output\n",
     "Final_Summary_Output"
    ]
   },
@@ -407,82 +463,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_e7739_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Total_Count</th>        <th class=\"col_heading level0 col1\" >Percentage of Players</th>    </tr>    <tr>        <th class=\"index_name level0\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_7e618_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Total_Count</th>        <th class=\"col_heading level0 col1\" >Percentage of Players</th>    </tr>    <tr>        <th class=\"index_name level0\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_e7739_level0_row0\" class=\"row_heading level0 row0\" ><10</th>\n",
-       "                        <td id=\"T_e7739_row0_col0\" class=\"data row0 col0\" >17</td>\n",
-       "                        <td id=\"T_e7739_row0_col1\" class=\"data row0 col1\" >2.95%</td>\n",
+       "                        <th id=\"T_7e618_level0_row0\" class=\"row_heading level0 row0\" ><10</th>\n",
+       "                        <td id=\"T_7e618_row0_col0\" class=\"data row0 col0\" >17</td>\n",
+       "                        <td id=\"T_7e618_row0_col1\" class=\"data row0 col1\" >2.95%</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_e7739_level0_row1\" class=\"row_heading level0 row1\" >10-14</th>\n",
-       "                        <td id=\"T_e7739_row1_col0\" class=\"data row1 col0\" >22</td>\n",
-       "                        <td id=\"T_e7739_row1_col1\" class=\"data row1 col1\" >3.82%</td>\n",
+       "                        <th id=\"T_7e618_level0_row1\" class=\"row_heading level0 row1\" >10-14</th>\n",
+       "                        <td id=\"T_7e618_row1_col0\" class=\"data row1 col0\" >22</td>\n",
+       "                        <td id=\"T_7e618_row1_col1\" class=\"data row1 col1\" >3.82%</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_e7739_level0_row2\" class=\"row_heading level0 row2\" >15-19</th>\n",
-       "                        <td id=\"T_e7739_row2_col0\" class=\"data row2 col0\" >107</td>\n",
-       "                        <td id=\"T_e7739_row2_col1\" class=\"data row2 col1\" >18.58%</td>\n",
+       "                        <th id=\"T_7e618_level0_row2\" class=\"row_heading level0 row2\" >15-19</th>\n",
+       "                        <td id=\"T_7e618_row2_col0\" class=\"data row2 col0\" >107</td>\n",
+       "                        <td id=\"T_7e618_row2_col1\" class=\"data row2 col1\" >18.58%</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_e7739_level0_row3\" class=\"row_heading level0 row3\" >20-24</th>\n",
-       "                        <td id=\"T_e7739_row3_col0\" class=\"data row3 col0\" >258</td>\n",
-       "                        <td id=\"T_e7739_row3_col1\" class=\"data row3 col1\" >44.79%</td>\n",
+       "                        <th id=\"T_7e618_level0_row3\" class=\"row_heading level0 row3\" >20-24</th>\n",
+       "                        <td id=\"T_7e618_row3_col0\" class=\"data row3 col0\" >258</td>\n",
+       "                        <td id=\"T_7e618_row3_col1\" class=\"data row3 col1\" >44.79%</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_e7739_level0_row4\" class=\"row_heading level0 row4\" >25-29</th>\n",
-       "                        <td id=\"T_e7739_row4_col0\" class=\"data row4 col0\" >77</td>\n",
-       "                        <td id=\"T_e7739_row4_col1\" class=\"data row4 col1\" >13.37%</td>\n",
+       "                        <th id=\"T_7e618_level0_row4\" class=\"row_heading level0 row4\" >25-29</th>\n",
+       "                        <td id=\"T_7e618_row4_col0\" class=\"data row4 col0\" >77</td>\n",
+       "                        <td id=\"T_7e618_row4_col1\" class=\"data row4 col1\" >13.37%</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_e7739_level0_row5\" class=\"row_heading level0 row5\" >30-34</th>\n",
-       "                        <td id=\"T_e7739_row5_col0\" class=\"data row5 col0\" >52</td>\n",
-       "                        <td id=\"T_e7739_row5_col1\" class=\"data row5 col1\" >9.03%</td>\n",
+       "                        <th id=\"T_7e618_level0_row5\" class=\"row_heading level0 row5\" >30-34</th>\n",
+       "                        <td id=\"T_7e618_row5_col0\" class=\"data row5 col0\" >52</td>\n",
+       "                        <td id=\"T_7e618_row5_col1\" class=\"data row5 col1\" >9.03%</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_e7739_level0_row6\" class=\"row_heading level0 row6\" >35-39</th>\n",
-       "                        <td id=\"T_e7739_row6_col0\" class=\"data row6 col0\" >31</td>\n",
-       "                        <td id=\"T_e7739_row6_col1\" class=\"data row6 col1\" >5.38%</td>\n",
+       "                        <th id=\"T_7e618_level0_row6\" class=\"row_heading level0 row6\" >35-39</th>\n",
+       "                        <td id=\"T_7e618_row6_col0\" class=\"data row6 col0\" >31</td>\n",
+       "                        <td id=\"T_7e618_row6_col1\" class=\"data row6 col1\" >5.38%</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_e7739_level0_row7\" class=\"row_heading level0 row7\" >40+</th>\n",
-       "                        <td id=\"T_e7739_row7_col0\" class=\"data row7 col0\" >12</td>\n",
-       "                        <td id=\"T_e7739_row7_col1\" class=\"data row7 col1\" >2.08%</td>\n",
+       "                        <th id=\"T_7e618_level0_row7\" class=\"row_heading level0 row7\" >40+</th>\n",
+       "                        <td id=\"T_7e618_row7_col0\" class=\"data row7 col0\" >12</td>\n",
+       "                        <td id=\"T_7e618_row7_col1\" class=\"data row7 col1\" >2.08%</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x209b84ea400>"
+       "<pandas.io.formats.style.Styler at 0x1e07b5bfd00>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Bins are   \n",
+    "# Create Bins\n",
     "bins = [0,9.99,14.99,19.99,24.99,29.99,34.99,39.99,49.99]\n",
     "\n",
     "# Create the names for the bins\n",
     "group_names = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
+    "\n",
+    "#Categorize the existing players using the bins\n",
     "purchase_data[\"Age Summary\"] = pd.cut(purchase_data[\"Age\"], bins, labels=group_names, include_lowest=True)\n",
+    "\n",
+    "#Grouping by age\n",
     "By_Age = purchase_data.groupby(\"Age Summary\")\n",
     "\n",
+    "#Calcualte the numbers by Age Group\n",
     "Count_Age= By_Age[\"SN\"].nunique()\n",
+    "\n",
+    "#Calculate the percentages by age group\n",
     "Percentage_Age=(Count_Age/Unique_Players)*100\n",
     "\n",
+    "#Create the Output Dataframe\n",
     "Age_df=pd.DataFrame(({'Total_Count':Count_Age,'Percentage of Players':Percentage_Age}))\n",
-    "Output_Age= Age_df.style.format({\"Percentage of Players\":\"{:,.2f}%\"})\n",
-    "                                \n",
-    "Output_Age.index.name =\"\"\n",
     "\n",
+    "#Format the Output Dataframe columns\n",
+    "Output_Age= Age_df.style.format({\"Percentage of Players\":\"{:,.2f}%\"})\n",
+    "\n",
+    "#Removing the index name\n",
+    "Output_Age.index.name =\"\"\n",
+    "#Displaying the Output\n",
     "Output_Age\n",
     "\n"
    ]
